<resources>
    <string name="app_name">DoAn_Application</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lich_thang">Lịch Tháng</string>
    <string name="bao_thuc">Báo Thức</string>
    <string name="bam_gio">Bấm Giờ</string>
    <string name="dem_nguoc">Đếm Ngược</string>
    <string name="chuyen_doi">Chuyển Đổi</string>

    <!--phan cua diem-->
    <!--xu ly phan giao dien 1: giao diện chính-->
    <string name="text_lbl_ten">BÁO THỨC</string>
    <!--bao thuc item-->
    <string name="text_giobt">08:00</string>
    <string name="text_ngaybt">SA</string>
    <string name="text_mota">Mô tả</string>

    <string name="text_chunhat">CN</string>
    <string name="text_thu2">T2</string>
    <string name="text_thu3">T3</string>
    <string name="text_thu4">T4</string>
    <string name="text_thu5">T5</string>
    <string name="text_thu6">T6</string>
    <string name="text_thu7">T7</string>

    <!--xu ly phan giao dien 2: cài báo thức-->
    <string name="text_lbl_create">CÀI BÁO THỨC</string>
    <string name="text_edt_ghichu">Ghi chú</string>
    <string name="text_btn_chongio">Click vào đây để chọn giờ!</string>
    <string name="text_chuongbt">Chuông báo thức</string>
    <string name="hint_macdinh">Mặc định(Last Christmas)</string>
    <string name="text_laplai">Lặp lại</string>
    <string name="hint_ngay">Chủ nhật</string>
    <string name="text_baorung">Báo rung</string>
    <string name="text_btn_huytao">Huỷ bỏ</string>
    <string name="text_btn_hoantat">Hoàn tất</string>

    <!--xu ly phan giao dien 3: xoá báo thức-->
    <string name="text_lbl_delete">XOÁ BÁO THỨC</string>
    <string name="text_btn_xoa">Xoá(0)</string>
    <string name="text_btn_huy">Huỷ bỏ</string>

    <!--xu ly phan giao dien 3: chuông báo thức-->
    <string name="text_lbl_ring">CHUÔNG BÁO THỨC</string>
    <string name="text_btn_ring">Áp dụng</string>
    <string name="text_lbl_tenchuong">Mặc định</string>


</resources>
