<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/hinhnen10"
    android:orientation="vertical"
    tools:context=".baothuc.TaoBaoThucActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4">

        <TextView
            android:id="@+id/lbl_create"
            android:layout_marginTop="@dimen/mg_create_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/text_lbl_create"
            android:textColor="#fff"
            android:textSize="@dimen/text_size_tieude"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            />

        <!--nut tao bao thuc -->
        <Button
            android:id="@+id/btn_giohen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="setTime"
            android:layout_marginTop="@dimen/mg_create_top"
            android:text="@string/text_btn_chongio"
            android:layout_marginLeft="@dimen/pd_create_left"
            android:layout_marginRight="@dimen/pd_create_right"
            android:textSize="@dimen/text_size"
            android:layout_below="@id/lbl_create"
            />

        <EditText
            android:id="@+id/edt_mota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_edt_ghichu"
            android:textSize="@dimen/text_size"
            android:layout_below="@id/btn_giohen"
            android:layout_marginTop="@dimen/mg_create_top"
            android:layout_marginLeft="@dimen/pd_create_left"
            android:layout_marginRight="@dimen/pd_create_right"
            android:textColor="#1c1b1b"/>

        <TextView
            android:id="@+id/txt_tieudechuong"
            android:layout_below="@id/edt_mota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_chuongbt"
            android:layout_marginTop="@dimen/mg_create_top"
            android:textSize="@dimen/text_size"
            android:layout_marginLeft="@dimen/pd_create_left"
            android:textColor="#1c1b1b"/>

        <TextView
            android:id="@+id/txt_tenchuong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_macdinh"
            android:textColor="#ffffff"
            android:layout_marginTop="@dimen/mg_create_top"
            android:layout_below="@id/txt_tieudechuong"
            android:layout_marginLeft="@dimen/pd_create_left"
            android:textSize="@dimen/text_size" />

        <TextView
            android:id="@+id/txt_tdlapchuong"
            android:layout_below="@id/txt_tenchuong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_laplai"
            android:textSize="@dimen/text_size"
            android:layout_marginTop="@dimen/mg_create_top"
            android:layout_marginLeft="@dimen/pd_create_left"
            android:textColor="#ece9e9"/>

        <LinearLayout
            android:id="@+id/layout_ngaytrongtuan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_tdlapchuong"
            android:layout_marginTop="@dimen/mg_create_top"
            android:layout_marginLeft="@dimen/pd_create_left"
            android:gravity="center"
            android:weightSum="7"

            >
            <TextView
                android:id="@+id/txt_chunhat"
                android:layout_margin="5dp"
                android:layout_width="wrap_content"
                android:textSize="@dimen/text_size_ngay"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_chunhat"/>

            <TextView
                android:id="@+id/txt_thuhai"
                android:layout_margin="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_size_ngay"
                android:layout_weight="1"
                android:text="@string/text_thu2"/>

            <TextView
                android:id="@+id/txt_thuba"
                android:layout_margin="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/text_size_ngay"
                android:text="@string/text_thu3"/>

            <TextView
                android:id="@+id/txt_thutu"
                android:layout_margin="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/text_size_ngay"
                android:text="@string/text_thu4"/>

            <TextView
                android:id="@+id/txt_thunam"
                android:layout_margin="5dp"
                android:layout_width="wrap_content"
                android:textSize="@dimen/text_size_ngay"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_thu5"/>

            <TextView
                android:id="@+id/txt_thusau"
                android:layout_margin="5dp"
                android:layout_width="wrap_content"
                android:textSize="@dimen/text_size_ngay"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/text_thu6"/>

            <TextView
                android:id="@+id/txt_thubay"
                android:layout_margin="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/text_size_ngay"
                android:text="@string/text_thu7"/>
        </LinearLayout>

        <!--<LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:weightSum="10"
            android:layout_marginTop="@dimen/mg_create_top"
            android:id="@+id/layout_baorung"
            android:layout_below="@id/layout_ngaytrongtuan"
            >

            <TextView
                android:id="@+id/txt_baorung"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_baorung"
                android:textSize="@dimen/text_size"
                android:layout_marginLeft="@dimen/pd_create_left"
                android:layout_weight="9"
                android:textColor="#ece9e9"

                />

            <CheckBox
                android:id="@+id/txt_checkrung"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

        </LinearLayout>-->

    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:layout_weight="1"
        >

        <!--nút huỷ-->
        <Button
            android:id="@+id/btn_huy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size"
            android:layout_marginRight="@dimen/pd_create_right"
            android:background="@drawable/vien_baothuc"
            android:text="@string/text_btn_huytao" />

        <!--nút thêm báo thức-->
        <Button
            android:id="@+id/btn_add"
            android:textSize="@dimen/text_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/pd_create_left"
            android:background="@drawable/vien_baothuc"
            android:text="@string/text_btn_hoantat" />
    </LinearLayout>


</LinearLayout>